RESOLVED FIXED310054
decidePolicyForSOAuthorizationLoad should fire even when the web view is not in a window
https://bugs.webkit.org/show_bug.cgi?id=310054
Summary decidePolicyForSOAuthorizationLoad should fire even when the web view is not ...
pascoe@apple.com
Reported 2026-03-16 15:36:36 PDT
Some clients have had to work around decidePolicyForSOAuthorizationLoad not firing whenever the web view is not in a window by making expensive synchronous calls. We should alleviate their need by firing decidePolicyForSOAuthorizationLoad in either case.
Attachments
pascoe@apple.com
Comment 1 2026-03-16 15:37:37 PDT
pascoe@apple.com
Comment 2 2026-03-17 10:51:21 PDT
EWS
Comment 3 2026-03-20 12:54:11 PDT
Committed 309630@main (ee2072d3d9d0): <https://commits.webkit.org/309630@main> Reviewed commits have been landed. Closing PR #60784 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.